# skolmaten-python

./: .pre-commit-config.yaml  Jenkinsfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: codecov.yml  linting-check.yml  pypi-publish.yml  tests.yml
molskaten/: __init__.py  molskaten.py  utils.py
tests/molskaten/: test_molskaten.py
