[tool.poetry]
name = "molskaten"
version = "1.0.0"
description = "A (forked) python wrapper for the skolmaten service."
authors = ["granis <granis@gmail.com>"]
license = "MIT"
repository = "https://github.com/granis/skolmaten-python"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
/(
  \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
