[tool.poetry]
name = "molskaten"
version = "0.0.0"
description = "A (forked) python wrapper for the skolmaten service."
authors = ["granis <granis@gmail.com>"]
license = "MIT"
repository = "https://github.com/granis/skolmaten-python"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
dirty = "true"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^3.0.0"
types-requests = "^2.28.11.7"
mypy = "^0.991"
pytest = "^7.2.0"
xmltodict = "^0.13.0"
coverage = {extras = ["toml"], version = "^7.0.4"}
pytest-cov = "^4.0.0"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
/(
  \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 132
skip_glob = [ "docs", "notes" ]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.vulture]
paths = ["molskaten"]
min_confidence = 80

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = ["tests/*"]
